k8s/transaction-history-pre-prod/preprod-deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: transaction-history-microservice
  namespace: jc-pre-prod-microservices
  labels:
    app: transaction-history-microservice
    app.kubernetes.io/part-of: jc-pre-prod-microservices
    monitoring.appd: AppD_NodeJS
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - transaction-history-microservice
        from:
          kind: ImageStreamTag
          namespace: jc-pre-prod-microservices
          name: 'transaction-history-microservice:latest'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: transaction-history-microservice
    deploymentconfig: transaction-history-microservice
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: transaction-history-microservice
        deploymentconfig: transaction-history-microservice
      annotations:
        openshift.io/generated-by: jenkins-pipeline
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: transaction-history-microservice
          image: image-registry.openshift-image-registry.svc:5000/jc-pre-prod-microservices/transaction-history-microservice:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          expose: true
          livenessProbe:
            failureThreshold: 12
            httpGet:
              path: /live
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            monitoring:
              labels:
                k8s-app: jazzcash-project
          readinessProbe:
            failureThreshold: 12
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5                    
          resources:
            limits:
              memory: 768Mi
              cpu: '0.9'
            requests:
              memory: 112Mi
              cpu: '360m'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
