k8s/transaction-history-pre-prod/preprod-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: transaction-history-microservice
  namespace: jc-pre-prod-microservices
spec:
  to:
    kind: Service
    name: transaction-history-microservice
  port:
    targetPort: 3000-tcp
